# opcua_pubsub

./: .gitignore  Cargo.toml  Readme.md
examples/: message_publisher.rs  message_subscriber.rs  mqtt_example.rs  publisher.rs  publisher_from_cfg.rs  standalone_publisher.rs  standalone_subscriber.rs  subscriber.rs
src/: address_space.rs  app.rs  callback.rs  connection.rs  constants.rs  dataset.rs  discovery.rs  lib.rs  message.rs  network.rs  pubdataset.rs  pubsubmessage.rs  reader.rs  until.rs  writer.rs
src/information_model/: connection.rs  mod.rs
src/message/: mod.rs  ua_json.rs  uadp.rs
src/network/: configuration.rs  mod.rs  mqtt.rs  uadp.rs
tests/: mqttnetwork_test.rs  uadpnetwork_test.rs
