[package]
name = "opcua_pubsub"
version = "0.1.0"
edition = "2018"

[[examples]]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
socket2 = "0.4"
opcua-types="0.8.0"
opcua-server= {version = "0.8.0", optional = true }
opcua-console-logging = "0.8.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "1.2.1"

[features]
server-integration = ["opcua-server"]