[package]
name = "opcua_pubsub"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
socket2 = "0.4"
opcua-server = { git = "https://github.com/locka99/opcua.git", optional = true}
opcua-types = { git = "https://github.com/locka99/opcua.git"}
opcua-client = { git = "https://github.com/locka99/opcua.git", optional = true}
# opcua-types="0.8.0"
# opcua-server= {version = "0.8.0", optional = true }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "1.2.1"
url = "2.2.2"
paho-mqtt = {version = "0.9", optional = true}
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[features]
client-integration = ["opcua-client"]
server-integration = ["opcua-server"]
mqtt = ["paho-mqtt"]
default = ["server-integration", "mqtt", "client-integration"]

[dev-dependencies]
# opcua-console-logging = "0.8.0"
opcua-console-logging = { git = "https://github.com/locka99/opcua.git"}
rand = "0.8.3"
